电表识别端到端的训练脚本

--- a/.gitignore
+++ b/.gitignore
@@ -119,6 +119,7 @@ test_data_aug.py
 
 # pycharm
 .idea/
+.vscode/
 
 # temp checkout soln
 data/datasets/
@@ -126,3 +127,4 @@ data/ssd_dataloader.py
 
 # pylint
 .pylintrc
+weights/
